--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 
               <div class="item attr">
                 <div class="left">
-                  教育机构名称
+                  文章分类名称
                 </div>
                 <div class="right">
                   3天前发布
@@ -128,7 +128,7 @@
 
               <div class="item attr">
                 <div class="left">
-                  教育机构名称
+                  文章分类名称
                 </div>
                 <div class="right">
                   2小时前发布
@@ -166,11 +166,19 @@
 
 
     </div>
-    <nav class="navRouter"></nav>
+
   </div>
 
     <div id="app"></div>
     <!-- built files will be auto injected -->
+  <nav class="navRouter">
+    <ul>
+      <li class="focus">首页</li>
+      <li>家长帮</li>
+      <li>咨询服务 <div class="tips">102</div></li>
+      <li>我的</li>
+    </ul>
+  </nav>
   </body>
   <script>
     //封装的对象接受所有图片的盒元素与触发切换的最小滑动距离作为参数
