--- a/staticpage/index.html
+++ b/staticpage/index.html
@@ -7,10 +7,11 @@
     <meta content="telephone=no,email=no" name="format-detection">
     <title>首页</title>
     <script src="./lib/flexible.js"></script>
-    <link rel="stylesheet" href="./ccss/index.css">
+    <link rel="stylesheet" href="./css/public.css">
+    <link rel="stylesheet" href="./css/index.css">
   </head>
   <body>
-  <div class="item-section">
+  <div id="home">
     <div class="homepage">
       <div class="home_headimg">
         <div id="imgs">
@@ -52,17 +53,17 @@
           <ul>
             <li>
               <div class="img">
-                <img src="./src/public/images/class_0.jpg" alt="">
+                <img src="./images/class_0.jpg" alt="">
               </div>
             </li>
             <li>
               <div class="img">
-                <img src="./src/public/images/class_1.jpg" alt="">
+                <img src="./images/class_1.jpg" alt="">
               </div>
             </li>
             <li>
               <div class="img">
-                <img src="./src/public/images/class_2.jpg" alt="">
+                <img src="./images/class_2.jpg" alt="">
               </div>
             </li>
           </ul>
@@ -82,7 +83,7 @@
                 </dl>
               </div>
               <div class="item mess_img">
-                <img src="./src/public/images/20170523_145545435.jpg" alt="">
+                <img src="./images/20170523_145545435.jpg" alt="">
               </div>
 
               <div class="item attr">
@@ -102,9 +103,9 @@
                 </dl>
               </div>
               <div class="item mess_img">
-                <img src="./src/public/images/type1_0.jpg" alt="">
-                <img src="./src/public/images/type1_1.jpg" alt="">
-                <img src="./src/public/images/type1_2.jpg" alt="">
+                <img src="./images/type1_0.jpg" alt="">
+                <img src="./images/type1_1.jpg" alt="">
+                <img src="./images/type1_2.jpg" alt="">
               </div>
 
               <div class="item attr">
@@ -124,7 +125,7 @@
                 </dl>
               </div>
               <div class="item mess_img">
-                <img src="./src/public/images/20170523_145545435.jpg" alt="">
+                <img src="./images/20170523_145545435.jpg" alt="">
               </div>
 
               <div class="item attr">
@@ -144,9 +145,9 @@
                 </dl>
               </div>
               <div class="item mess_img">
-                <img src="./src/public/images/type1_0.jpg" alt="">
-                <img src="./src/public/images/type1_1.jpg" alt="">
-                <img src="./src/public/images/type1_2.jpg" alt="">
+                <img src="./images/type1_0.jpg" alt="">
+                <img src="./images/type1_1.jpg" alt="">
+                <img src="./images/type1_2.jpg" alt="">
               </div>
 
               <div class="item attr">
@@ -170,14 +171,12 @@
 
   </div>
 
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
   <nav class="navRouter">
     <ul>
-      <li class="focus">首页</li>
-      <li>家长帮</li>
-      <li>咨询服务 <div class="tips">102</div></li>
-      <li>我的</li>
+      <a href="./index.html"><li class="focus">首页</li></a>
+      <a href="./discover.html"><li >求索</li></a>
+      <a href="./service.html"><li>专属服务 <div class="tips">102</div></li></a>
+      <a href="./my.html"><li>我的</li></a>
     </ul>
   </nav>
   </body>
