--- a/staticpage/index.html
+++ b/staticpage/index.html
@@ -35,10 +35,10 @@
       </div>
       <div class="classification">
         <ul>
-          <li>公开课</li>
-          <li>排行榜</li>
+          <a href="./openclass.html"><li>公开课</li></a>
+          <a href="./ranklist.html"><li>排行榜</li></a>
           <li>商城</li>
-          <li>课程直播</li>
+          <a href="./live.html"><li>课程直播</li></a>
           <li>有声绘本</li>
         </ul>
       </div>
@@ -53,17 +53,17 @@
           <ul>
             <li>
               <div class="img">
-                <img src="./images/class_0.jpg" alt="">
+                <a href="./openclass_video.html"><img src="./images/class_0.jpg" alt=""></a>
               </div>
             </li>
             <li>
               <div class="img">
-                <img src="./images/class_1.jpg" alt="">
+                <a href="./openclass_video.html"><img src="./images/class_1.jpg" alt=""></a>
               </div>
             </li>
             <li>
               <div class="img">
-                <img src="./images/class_2.jpg" alt="">
+                <a href="./openclass_video.html"><img src="./images/class_2.jpg" alt=""></a>
               </div>
             </li>
           </ul>
@@ -76,7 +76,7 @@
         </div>
         <div class="mess_list">
           <ul>
-            <li class="type_0">
+            <a href="./details.html"><li class="type_0">
               <div class="item introduction">
                 <dl>
                   <dt>11111文章标题文章标题文章标题文章标题11111文章标题文章标题文章标题文章标题</dt>
@@ -94,9 +94,9 @@
                   2小时前发布
                 </div>
               </div>
-            </li>
+            </li></a>
 
-            <li class="type_1">
+            <a href="./details.html"><li class="type_1">
               <div class="item introduction">
                 <dl>
                   <dt>11111文章标题文章标题文章标题文章标题11111文章标题文章标题文章标题文章标题</dt>
@@ -116,9 +116,9 @@
                   3天前发布
                 </div>
               </div>
-            </li>
+            </li></a>
 
-            <li class="type_0">
+            <a href="./details.html"><li class="type_0">
               <div class="item introduction">
                 <dl>
                   <dt>11111文章标题文章标题文章标题文章标题11111文章标题文章标题文章标题文章标题</dt>
@@ -136,9 +136,9 @@
                   2小时前发布
                 </div>
               </div>
-            </li>
+            </li></a>
 
-            <li class="type_1">
+            <a href="./details.html"><li class="type_1">
               <div class="item introduction">
                 <dl>
                   <dt>11111文章标题文章标题文章标题文章标题11111文章标题文章标题文章标题文章标题</dt>
@@ -158,7 +158,7 @@
                   3天前发布
                 </div>
               </div>
-            </li>
+            </li></a>
 
 
           </ul>
