--- a/staticpage/my.html
+++ b/staticpage/my.html
@@ -8,10 +8,44 @@
     <title>我的</title>
     <script src="./lib/flexible.js"></script>
     <link rel="stylesheet" href="./css/public.css">
+    <link rel="stylesheet" href="./lib/bootstrap-3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/my.css">
   </head>
   <body>
   <div id="my">
+    <div class="my_head">
+      <div class="babyimg">
+        <img src="./images/haizi.jpg" alt="">
+      </div>
+
+      <h3>马修</h3>
+    </div>
+    <div class="clickBox">
+      <div class="lbox">
+        <ul>
+          <li>孩子的成长（已学习到的、量化的）</li>
+          <li>阶段测评(老师给与的评价，定期更新)</li>
+
+          <li>我的课时、学习目标</li>
+
+          <li>我要吐槽</li>
+          <li></li>
+          <li></li>
+          <li></li>
+          <li></li>
+        </ul>
+      </div>
+    </div>
+    <ul class="list-group">
+      <li class="list-group-item">金币箱</li>
+      <li class="list-group-item">勋章墙</li>
+      <li class="list-group-item">调查问卷</li>
+      <li class="list-group-item">修改信息</li>
+      <li class="list-group-item">关于我们</li>
+    </ul>
+    <div class="logout">
+      <button type="button" class="btn btn-danger">退出登录</button>
+    </div>
 
   </div>
   <nav class="navRouter">
