增加我的子页面

--- a/staticpage/my.html
+++ b/staticpage/my.html
@@ -23,25 +23,25 @@
     <div class="clickBox">
       <div class="lbox">
         <ul>
-          <li>孩子的成长（已学习到的、量化的）</li>
-          <li>阶段测评(老师给与的评价，定期更新)</li>
+          <a href="./my/growup.html"><li>孩子的成长</li></a>
+          <a href="./my/evaluation.html"><li>阶段测评</li></a>
 
-          <li>我的课时、学习目标</li>
+          <a href="./my/studytarget.html"><li>学习目标</li></a>
 
-          <li>我要吐槽</li>
-          <li></li>
-          <li></li>
-          <li></li>
-          <li></li>
+          <a href="./my/complaints.html"><li>我要吐槽</li></a>
+          <!--<li>可点击区域</li>-->
+          <!--<li>可点击区域</li>-->
+          <!--<li>可点击区域</li>-->
+          <!--<li>可点击区域</li>-->
         </ul>
       </div>
     </div>
     <ul class="list-group">
       <li class="list-group-item">金币箱</li>
-      <li class="list-group-item">勋章墙</li>
-      <li class="list-group-item">调查问卷</li>
+      <a href="./my/medal.html"><li class="list-group-item">勋章墙</li></a>
+        <a href="./my/questionnaire.html"><li class="list-group-item">调查问卷</li></a>
       <li class="list-group-item">修改信息</li>
-      <li class="list-group-item">关于我们</li>
+          <a href="./my/aboutus.html"><li class="list-group-item">关于我们</li></a>
     </ul>
     <div class="logout">
       <button type="button" class="btn btn-danger">退出登录</button>
